--- a/P9b.html
+++ b/P9b.html
@@ -7,7 +7,7 @@
 <body>
 
     <table border="1spx" style="text-align: center">
-        <caption>Esta es la leyenda de tabla</caption>
+        <caption>Clasificación</caption>
         <th>
           <td>Puesto</td>
           <td>Puntos</td>
